[package]
name = "ton-block-compressor"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
zstd = { version = "0.9.0" }

[dev-dependencies]
criterion = "0.3"
rand = "0.8.4"
pprof = { version = "0.3", features = ["flamegraph"] }

[[bench]]
name = "all"
harness = false
